--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
         <!-- <div></div> -->
         <!-- forms son etiquetas que se refieren a un formulario -->
         <!-- los forms sirven para ingresar inputs -->
+        <!-- method es lo que se le pone para saber si el formulario 
+        va a el servidor o al local -->
         <form>
             <!-- inputs: son los datos o tipos de datos de entrada,
             son como un metodo de entrada para que un dato llegue a 
@@ -126,6 +128,10 @@
             <input type="button" value="botón"> <br>
             <!-- Submit: crea un boton de enviar -->
             <input type="submit"> 
+            <!-- esto tambien funciona como input pero no lo dice
+            se puede usar para poner textos largos, se le pueden poner 
+            dimensiones predefinidas pero se pueden redimensionar en la web -->
+            <textarea></textarea>
         </form>
     </body>
 </html>
