--- a/página2.html
+++ b/página2.html
@@ -4,6 +4,15 @@
         <title>Pagina 2</title>
     </head>
     <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="structure.html">Estructuracion</a></li>
+                    <li><a href="index.html">Demostración</a></li>
+                    <li><a href="página2.html">Pagina de relleno</a></li>
+                </ul>
+            </nav>
+        </header>
         <h1>Has entrado a la página 2</h1>
         <a href="index.html">Regresar a la principal</a>
     </body>
