--- a/cosas/pagina3.html
+++ b/cosas/pagina3.html
@@ -4,6 +4,15 @@
         <title>Pagina 3</title>
     </head>
     <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="structure.html">Estructuracion</a></li>
+                    <li><a href="index.html">Demostración</a></li>
+                    <li><a href="página2.html">Pagina de relleno</a></li>
+                </ul>
+            </nav>
+        </header>
         <h1>Bienvenido a la pagina 3</h1>
         <a href="../index.html">Regresar a la pagina principal</a>
     </body>
